--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"postgres": "^3.4.4",
+		"svelte-sonner": "^0.3.28",
 		"sveltekit-superforms": "^2.22.1",
 		"zod": "^3.24.1"
 	}
