replaced @ with $lib

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
 		"stop": "supabase stop",
 		"start": "supabase start"
 	},
+	"engines": {
+		"node": "22"
+	},
 	"devDependencies": {
 		"@playwright/test": "^1.45.3",
 		"@sveltejs/adapter-auto": "^3.0.0",
